--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -20,7 +20,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -30,6 +36,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     library:
         vitam_component: library
         host: "library.service.{{ consul_domain }}"
@@ -41,7 +49,13 @@ vitam:
         metrics_enabled: false
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -51,6 +65,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
 
 tenant_to_clean_before_tnr: ["0","1"]
 
