--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -151,7 +151,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -161,6 +167,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     accessinternal:
         vitam_component: access-internal
         host: "access-internal.service.{{ consul_domain }}"
@@ -173,7 +181,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -183,6 +197,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     functional_administration:
         vitam_component: functional-administration
         host: "functional-administration.service.{{ consul_domain }}"
@@ -196,7 +212,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -206,6 +228,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     elastickibanainterceptor:
         vitam_component: elastic-kibana-interceptor
         host: "elastic-kibana-interceptor.service.{{ consul_domain }}"
@@ -219,7 +243,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -229,6 +259,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     batchreport:
         vitam_component: batch-report
         host: "batch-report.service.{{ consul_domain }}"
@@ -241,7 +273,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -251,6 +289,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     ingestexternal:
         vitam_component: ingest-external
         # DNS record for the service:
@@ -280,7 +320,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -290,6 +336,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     ingestinternal:
         vitam_component: ingest-internal
         host: "ingest-internal.service.{{ consul_domain }}"
@@ -302,7 +350,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -312,6 +366,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     ihm_demo:
         vitam_component: ihm-demo
         host: "ihm-demo.service.{{ consul_domain }}"
@@ -352,7 +408,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -362,6 +424,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     logbook:
         vitam_component: logbook
         host: "logbook.service.{{ consul_domain }}"
@@ -383,7 +447,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -393,6 +463,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     metadata:
         vitam_component: metadata
         host: "metadata.service.{{ consul_domain }}"
@@ -406,7 +478,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -425,6 +503,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     processing:
         vitam_component: processing
         host: "processing.service.{{ consul_domain }}"
@@ -437,7 +517,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         maxDistributionInMemoryBufferSize: 100000
@@ -449,6 +535,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     security_internal:
         vitam_component: security-internal
         host: "security-internal.service.{{ consul_domain }}"
@@ -461,7 +549,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -471,6 +565,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     storageengine:
         vitam_component: storage
         host: "storage.service.{{ consul_domain }}"
@@ -497,7 +593,16 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
+          offersync:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         # unit time per kB (in ms) used while calculating the timeout of an http request between storage and offer (if the calculated result is less than 60s, this time is used)
         timeoutMsPerKB: 100
@@ -509,6 +614,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     storageofferdefault:
         vitam_component: "offer"
         port_service: 9900
@@ -520,7 +627,19 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
+          offer_tape:
+            history_days: 10
+            totalsize: "5GB"
+          offer_tape_backup:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -530,6 +649,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     worker:
         vitam_component: worker
         host: "worker.service.{{ consul_domain }}"
@@ -542,7 +663,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -560,6 +687,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
     workspace:
         vitam_component: workspace
         host: "workspace.service.{{ consul_domain }}"
@@ -572,7 +701,13 @@ vitam:
         metrics_enabled: true
         logback_rolling_policy: true
         logback_max_file_size: "10MB"
-        logback_total_size_cap: "5GB"
+        logback_total_size_cap:
+          file: 
+            history_days: 10
+            totalsize: "5GB"
+          security:
+            history_days: 10
+            totalsize: "5GB"
         jvm_log: false
         performance_logger: "false"
         reconstruction:
@@ -582,6 +717,8 @@ vitam:
         # metricslevel: DEBUG
         # metricsinterval: 3
         # metricsunit: MINUTES
+        access_retention_days: 15 # Number of days for file retention
+        access_total_size_cap: "14GB" # total acceptable size
 
 # for functional-administration, manage master/slave tenant configuration
 vitam_tenants_usage_external:
